Added cell for BiNGO analysis

--- a/basic_protocol_1.ipynb
+++ b/basic_protocol_1.ipynb
@@ -84,7 +84,7 @@
         "!ls -l \n",
         "OUTPUT_DIR = 'output/'"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +139,7 @@
         "#!pip install git+https://github.com/cytoscape/py4cytoscape@0.0.5\n",
         "#!pip install git+https://github.com/cytoscape/py4cytoscape"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -199,7 +199,7 @@
         "browser_client_js = p4c.get_browser_client_js(True)\n",
         "IPython.display.Javascript(browser_client_js) # Start browser client\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -504,7 +504,7 @@
       "source": [
         "p4c.cytoscape_version_info()\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -566,7 +566,7 @@
         "gangsu_sandbox = p4c.sandbox_set('GangSu_sandbox', copy_samples=False, reinitialize=False)\n",
         "gangsu_sandbox"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -626,7 +626,7 @@
         "net_suid\n",
         "\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -694,7 +694,7 @@
         "GDS112_full\n",
         "\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1172,7 +1172,7 @@
       "source": [
         "p4c.load_table_data(GDS112_full, data_key_column='Gene ID')"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1224,7 +1224,7 @@
       "source": [
         "p4c.create_column_filter('SymbolOK', 'Gene symbol', '[A-Z0-9]*', 'REGEX')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1278,7 +1278,7 @@
       "source": [
         "p4c.apply_filter('SymbolOK')"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2333,7 +2333,7 @@
         "new_suid = p4c.create_subnetwork()\n",
         "new_suid"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2367,7 +2367,7 @@
         "p4c.delete_network(net_suid)\n",
         "net_suid = new_suid"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2391,7 +2391,7 @@
       "source": [
         "p4c.layout_network('force-directed')\n"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2428,7 +2428,7 @@
       "source": [
         "p4c.install_app('clusterMaker2')"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2483,7 +2483,7 @@
       "source": [
         "p4c.commands_post('cluster hierarchical showUI=true clusterAttributes=false nodeAttributeList=\"GSM1029,GSM1030,GSM1032,GSM1033,GSM1034\"')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -7322,6 +7322,24 @@
           },
           "execution_count": 15
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "l_7RgMx-7S7T"
+      },
+      "source": [
+        "#Use BiNGO for enrichment analysis"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jRsZ2Xef7dp0"
+      },
+      "source": [
+        "The BiNGO app doesn't have automation entrypoints, so this analysis isn't possible right now. Is there a different app that can do this?"
       ]
     }
   ]
